# gaugegap-foundry

./: .gitignore  3DAY_SPRINT.md  AGENTS.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  EXECUTION_COMPLETE.md  FINAL_SUMMARY.md  GAUGEGAP_0005_DEPLOYMENT.md  GAUGEGAP_003_004_005_COMPLETE.md  GAUGEGAP_COMPREHENSIVE_ANALYSIS.md  LICENSE  Makefile  PUBLISH_NOW.sh  QUICKSTART.md  README.md  ROADMAP_TO_RIGOROUS_PROOF.md  docker-compose.yml  pyproject.toml
benchmarks/: anomaly_known_answers.json  known_answers.json  su2_one_plaquette_known_answers.json
config/: foundry.yaml
docs/: ADVANCED_QUANTUM_SUITE.md  ARCHITECTURE.md  EXPERIENCE.md  INSTALL.md  MASTER_ROADMAP.md  QED_SCHWINGER_HOTT.md  QUANTUM_COMPUTING_CAPABILITIES.md  QUANTUM_MVP_IMPLEMENTATION.md  advanced-mathematical-infrastructure.md  agent-work-orders.md  alcubierre-warp.md  anharmonic-certified.md  anomaly-forge.md  attractor-forge.md  certificate-verification.md  certified-bracket.md  certified-quantum.md  certified-shadows.md  certify-api.md  cherenkov.md  cudaq-evaluation.md  curverank-certified-screening.md  curverank-formal-proof.md  curverank-ibm-runbook.md  curverank-signal-extraction.md  decoherence-branching.md  deep-boil-verification.md  double-well-certified.md  eightfold-certified.md  end-of-day-integration-2026-06-26.md  entanglement-dynamics.md  entanglement-speed-limit.md  epistemics-and-claim-boundaries.md  ergotropy.md  error-budget-and-seeding.md  foundry-experience.md  gaugegap-0002.md  gaugegap-0003-ai-gap-search.md  gaugegap-0004-hardware-readiness.md  gaugegap-0005.md  (+39 more)
examples/: curverank_screen.spectra  sentiment_cases.jsonl  sentiment_eval.verdict  sentiment_f1.verdict
figures/: eightfold_dashboard.html
hypotheses/: cohesive-gauge-0001.yaml  curverank-0001.yaml  deep-boil-0001.yaml  flowgap-0001.yaml  flowgap-0002.yaml  flowgap-0003.yaml  flowgap-0004.yaml  flowgap-0005.yaml  foundry-experience-0001.yaml  gaugegap-0001.yaml  gaugegap-0002.yaml  gaugegap-0003-ai-gap-search.json  gaugegap-0003.yaml  gaugegap-0004.yaml  gaugegap-0005.yaml  gaugegap-search-0001.json  gaugegap-u1-0001.yaml  netgap-0001.yaml  netgap-0002.yaml  netgap-0003.yaml  netgap-0004.yaml  netgap-0005.yaml  netgap-0006.yaml  netgap-0007.yaml  qed-loop-0001.yaml  schwinger-matter-0001.yaml
scripts/: analyze_dynamics.py  analyze_gaugegap_complete.py  analyze_sprint_results.py  apply_anomaly_readme_once.py  audit_repository_inventory.py  build_eightfold_dashboard.py  build_formal_registry.py  build_foundry_experience.py  build_reviewer_packet.py  build_source_manifest.py  certify_screening.py  check_curverank_reproduction.py  check_deep_boil_registry.py  claim_boundary_audit.py  compile_coq_certificates.py  cross_check_arb.py  generate_candidate_dossier.py  generate_foundry_experience.py  generate_foundry_experience_complete.py  generate_geometry_extra.py  generate_geometry_figures.py  generate_geometry_html.py  generate_inference_traps_figure.py  generate_physical_limits_figures.py  generate_publication_figures.py  generate_reproducibility_proofpack.py  quantum_status.py  research_maturity_audit.py  run_advanced_quantum_demo.py  run_alcubierre_warp.py  run_anharmonic.py  run_anomaly_forge.py  run_attractor_forge.py  run_candidate_validation.py  run_certified_bracket.py  run_certified_quantum_report.py  run_certified_shadows.py  run_certify_scaling.py  run_cherenkov.py  run_cudaq_benchmark.py  (+63 more)
tests/: test_advanced_quantum.py  test_advanced_quantum_suite.py  test_alcubierre.py  test_analysis_modules.py  test_anharmonic.py  test_anharmonic_cross_check.py  test_anomaly_forge.py  test_arb_cross_check.py  test_bayes.py  test_bekenstein.py  test_berksons_paradox.py  test_braket_runner.py  test_candidate_dossier.py  test_candidate_validation.py  test_certified_bracket.py  test_certified_quantum_report.py  test_certified_quantum_stack.py  test_certified_shadows.py  test_certified_zeros.py  test_certify.py  test_certify_consistency.py  test_cherenkov.py  test_claim_boundary_audit.py  test_compile_coq.py  test_compton_schwarzschild.py  test_continuum_extrapolation.py  test_cross_platform.py  test_cudaq_adapter.py  test_curverank_certified.py  test_curverank_formal_proof.py  test_curverank_ibm.py  test_curverank_operators.py  test_curverank_qpe.py  test_double_well.py  (+97 more)
(+417 files in other folders)
