[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaugegap-foundry"
version = "0.1.0"
description = "Verification-first finite lattice gauge benchmark infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Xio AI Solutions" }
]
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "mpmath>=1.3",
]

[project.optional-dependencies]
quantum = [
  "qiskit>=2.4,<3",
  "qiskit-aer>=0.17",
  "qiskit-ibm-runtime>=0.46",
]
quantinuum = [
  "pytket>=1.30",
  "pytket-quantinuum>=0.37",
  "pytket-qiskit>=0.54",
]
braket = [
  "amazon-braket-sdk>=1.80",
]
ionq = [
  "qiskit-ionq>=0.5",
]
flow = [
  "scipy>=1.11",
]
spectral = [
  "scipy>=1.11",
]
# Optional independent rigorous-arithmetic backend (Arb) used only to
# cross-check the mpmath.iv certified enclosures during independent review.
crosscheck = [
  "python-flint>=0.6",
]
dev = [
  "pytest>=8",
  "scipy>=1.11",
]
all = [
  "gaugegap-foundry[quantum,quantinuum,braket,ionq,flow,spectral,crosscheck,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]
