[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaugegap-foundry"
version = "0.1.0"
description = "Verification-first finite lattice gauge benchmark infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Xio AI Solutions" }
]
keywords = [
  "certified-numerics", "interval-arithmetic", "quantum-computing",
  "spectral-screening", "formal-verification", "lattice-gauge-theory",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "mpmath>=1.3",
]

[project.urls]
Homepage = "https://github.com/XioAISolutions/gaugegap-foundry"
Repository = "https://github.com/XioAISolutions/gaugegap-foundry"

[project.scripts]
gaugegap-certify = "gaugegap.certify:main"

[project.optional-dependencies]
quantum = [
  "qiskit>=2.4,<3",
  "qiskit-aer>=0.17",
  "qiskit-ibm-runtime>=0.46",
]
quantinuum = [
  "pytket>=1.30",
  "pytket-quantinuum>=0.37",
  "pytket-qiskit>=0.54",
]
braket = [
  "amazon-braket-sdk>=1.80",
]
ionq = [
  "qiskit-ionq>=0.5",
]
flow = [
  "scipy>=1.11",
]
spectral = [
  "scipy>=1.11",
]
# Optional independent rigorous-arithmetic backend (Arb): cross-checks the
# mpmath.iv certified enclosures and supplies independently certified Riemann
# zero enclosures (acb.zeta_zeros, which requires python-flint >= 0.7).
crosscheck = [
  "python-flint>=0.7",
]
# Optional SDP backend (dual-VQE style lower-bound cross-check). Not required.
sdp = [
  "cvxpy>=1.4",
]
# Optional open-quantum cross-check (the numpy Lindbladian path needs no deps).
open-quantum = [
  "qutip>=5.0",
]
# Optional SMT backend: z3 independently machine-verifies the certified-inequality
# schemas (an automated witness alongside the discharged Lean/Coq certificates).
smt = [
  "z3-solver>=4.12",
]
dev = [
  "pytest>=8",
  "scipy>=1.11",
  "z3-solver>=4.12",
]
all = [
  "gaugegap-foundry[quantum,quantinuum,braket,ionq,flow,spectral,crosscheck,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]
